--- a/src/components/Inspection/style.scss
+++ b/src/components/Inspection/style.scss
@@ -1,3 +1,14 @@
+.mainC .inspection .main-content__top {
+  background-image: url(https://intersica.com/wp-content/uploads/2019/07/inspector-phone-1.jpg);
+  background-position: center;
+  -webkit-background-size: 100%;
+  -webkit-background-size: cover;
+  -moz-background-size: 100%;
+  -moz-background-size: cover;
+  background-size: 100%;
+  background-size: cover;
+}
+
 .mainC {
   .main-content {
     margin-top: 97px;
@@ -5,14 +16,7 @@
       .header-content {
         padding: 5px 0px;
       }
-      background-image: url(https://intersica.com/wp-content/uploads/2019/07/inspector-phone-1.jpg);
-      background-position: center;
-      -webkit-background-size: 100%;
-      -webkit-background-size: cover;
-      -moz-background-size: 100%;
-      -moz-background-size: cover;
-      background-size: 100%;
-      background-size: cover;
+
       &__title {
         padding: 50px 0;
         font-weight: 700;
