--- a/src/components/ManPower/style.css
+++ b/src/components/ManPower/style.css
@@ -1,12 +1,12 @@
-.mainC .main-content {
-  margin-top: 97px;
-}
-
-.mainC .main-content__top {
+.mainC .manPower .main-content__top {
   background-image: url(https://www.evaluationz.com/wp-content/uploads/2013/01/services-banner.jpg);
   background-position: center;
   background-size: 100%;
   background-size: cover;
+}
+
+.mainC .main-content {
+  margin-top: 97px;
 }
 
 .mainC .main-content__top .header-content {
