--- a/src/components/OilGas/style.css
+++ b/src/components/OilGas/style.css
@@ -1,12 +1,12 @@
-.mainC .main-content {
-  margin-top: 97px;
-}
-
-.mainC .main-content__top {
-  background-image: url(https://www.evaluationz.com/wp-content/uploads/2013/01/services-banner.jpg);
+.mainC .oilGas .main-content__top {
+  background-image: url(https://saundersint.com/wp-content/uploads/2017/11/ED-1.jpg);
   background-position: center;
   background-size: 100%;
   background-size: cover;
+}
+
+.mainC .main-content {
+  margin-top: 97px;
 }
 
 .mainC .main-content__top .header-content {
