--- a/src/components/OilGas/style.scss
+++ b/src/components/OilGas/style.scss
@@ -1,5 +1,15 @@
 
 
+.mainC .oilGas .main-content__top { 
+  background-image: url(https://saundersint.com/wp-content/uploads/2017/11/ED-1.jpg);
+  background-position: center;
+  -webkit-background-size: 100%;
+  -webkit-background-size: cover;
+  -moz-background-size: 100%;
+  -moz-background-size: cover;
+  background-size: 100%;
+  background-size: cover;
+}
 
 .mainC {
   .main-content {
@@ -8,14 +18,7 @@
       .header-content {
         padding: 5px 0px;
       }
-      background-image: url(https://www.evaluationz.com/wp-content/uploads/2013/01/services-banner.jpg);
-      background-position: center;
-      -webkit-background-size: 100%;
-      -webkit-background-size: cover;
-      -moz-background-size: 100%;
-      -moz-background-size: cover;
-      background-size: 100%;
-      background-size: cover;
+
       &__title {
         padding: 50px 0;
         font-weight: 700;
