--- a/src/components/Welding/style.css
+++ b/src/components/Welding/style.css
@@ -1,12 +1,12 @@
-.mainC .main-content {
-  margin-top: 97px;
-}
-
-.mainC .main-content__top {
+.mainC .welding .main-content__top {
   background-image: url(https://saundersint.com/wp-content/uploads/2017/11/ED-1.jpg);
   background-position: center;
   background-size: 100%;
   background-size: cover;
+}
+
+.mainC .main-content {
+  margin-top: 97px;
 }
 
 .mainC .main-content__top .header-content {
