--- a/src/components/OilGas/style.css
+++ b/src/components/OilGas/style.css
@@ -1,5 +1,5 @@
 .mainC .oilGas .main-content__top {
-  background-image: url(https://saundersint.com/wp-content/uploads/2017/11/ED-1.jpg);
+  background-image: url(https://st.depositphotos.com/1155256/2095/i/950/depositphotos_20950207-stock-photo-giant-oil-refinery-panoramic.jpg);
   background-position: center;
   background-size: 100%;
   background-size: cover;
