--- a/src/components/Inspection/style.scss
+++ b/src/components/Inspection/style.scss
@@ -1,4 +1,4 @@
-.mainC .inspection .main-content__top {
+.mainC .manPower .main-content__top {
   background-image: url(https://intersica.com/wp-content/uploads/2019/07/inspector-phone-1.jpg);
   background-position: center;
   -webkit-background-size: 100%;
