--- a/src/components/Contact/style.scss
+++ b/src/components/Contact/style.scss
@@ -17,13 +17,12 @@
         color: var(--mainActiveText);
       }
     }
-    // .description {
 
-    // }
     .contact {
       display: flex;
       justify-content: space-between;
       margin-top: 20px;
+      margin-bottom: 50px;
       .details {
         width: 40%;
         .location-box {
@@ -32,16 +31,65 @@
           padding: 20px 20px 10px 20px;
           background-color: var(--secondBacground);
         }
-
       }
-      .map{
+      .map {
         width: 60%;
+        padding-left: 30px;
       }
+    }
+    .who {
+      display: block;
+      margin-top: 30px;
+      background-repeat: no-repeat;
+      background-image: url(https://st3.depositphotos.com/1038855/16314/v/450/depositphotos_163145218-stock-illustration-wire-frame-oil-tank.jpg);
+   p {
+    margin-bottom: 5
+   }
+    }
+    .c1 {
+      width: 60%;
+      display: inline-block;
+      position: relative;
+      float: left;
+
+      // &:after{
+      //   content: "";
+      //   position: absolute;
+      //   width: calc(100% + 5px);
+      //   height: calc(100% + 5px);
+      //   top: -10px;
+      //   left: -10px;
+      //   background-color: var(--mainActiveBacground);
+      //   z-index: -1;
+      // }
+      img {
+        width: 80%;
+        height: auto;
+      }
+    }
+    .c2 {
+      width: 40%;
+      display: inline-block;
     }
   }
 }
 .fixedH {
   .main-content {
     margin-top: 0;
+  }
+}
+
+.mapouter {
+  position: relative;
+  text-align: right;
+  width: 100%;
+  height: 390px;
+}
+.gmap_canvas {
+  overflow: hidden;
+  background: none !important;
+  height: 342px;
+  iframe {
+    width: 100%;
   }
 }
