--- a/src/components/Contact/style.css
+++ b/src/components/Contact/style.css
@@ -3,7 +3,7 @@
 }
 
 .mainC .main-content__top {
-  background-image: url(https://intersica.com/wp-content/uploads/2019/07/iStock-545645280-C-zbruch-.jpg);
+  background-image: url(https://st.depositphotos.com/1907633/2185/i/450/depositphotos_21855539-stock-photo-3d-stainless-human-social-network.jpg);
   background-position: center;
   background-size: 100%;
   background-size: cover;
