--- a/src/components/Welding/style.css
+++ b/src/components/Welding/style.css
@@ -1,5 +1,5 @@
 .mainC .welding .main-content__top {
-  background-image: url(https://saundersint.com/wp-content/uploads/2017/11/ED-1.jpg);
+  background-image: url(https://i.imgur.com/UrCUxgy.jpeg);
   background-position: center;
   background-size: 100%;
   background-size: cover;
