--- a/src/components/OilGas/style.css
+++ b/src/components/OilGas/style.css
@@ -1,5 +1,5 @@
 .mainC .oilGas .main-content__top {
-  background-image: url(https://st.depositphotos.com/1155256/2095/i/950/depositphotos_20950207-stock-photo-giant-oil-refinery-panoramic.jpg);
+  background-image: url(https://i.imgur.com/dEOkpP1.jpeg);
   background-position: center;
   background-size: 100%;
   background-size: cover;
