--- a/src/components/OilGas/style.scss
+++ b/src/components/OilGas/style.scss
@@ -1,7 +1,7 @@
 
 
 .mainC .oilGas .main-content__top { 
-  background-image: url(https://st.depositphotos.com/1155256/2095/i/950/depositphotos_20950207-stock-photo-giant-oil-refinery-panoramic.jpg);
+  background-image: url(https://i.imgur.com/dEOkpP1.jpeg);
   background-position: center;
   -webkit-background-size: 100%;
   -webkit-background-size: cover;
