--- a/src/components/OilGas/style.scss
+++ b/src/components/OilGas/style.scss
@@ -1,7 +1,8 @@
 
 
 .mainC .oilGas .main-content__top { 
-  background-image: url(https://i.imgur.com/dEOkpP1.jpeg);
+  background-image: url(https://st3.depositphotos.com/1927453/19571/i/450/depositphotos_195714028-stock-photo-oil-refinery-at-sunset-with.jpg
+  );
   background-position: center;
   -webkit-background-size: 100%;
   -webkit-background-size: cover;
