--- a/src/components/Contact/style.css
+++ b/src/components/Contact/style.css
@@ -3,7 +3,7 @@
 }
 
 .mainC .main-content__top {
-  background-image: url(https://intersica.com/wp-content/uploads/2019/07/iStock-545645280-C-zbruch-.jpg);
+  background-image: url(https://us.123rf.com/450wm/valex113/valex1131512/valex113151200058/51415362-abstract-3d-rendering-of-sphere-with-chaotic-structure-background-with-red-wireframe-and-globe-in-em.jpg?ver=6);
   background-position: center;
   background-size: 100%;
   background-size: cover;
