--- a/src/components/OilGas/style.css
+++ b/src/components/OilGas/style.css
@@ -1,5 +1,5 @@
 .mainC .oilGas .main-content__top {
-  background-image: url(https://st3.depositphotos.com/1927453/19571/i/450/depositphotos_195714028-stock-photo-oil-refinery-at-sunset-with.jpg);
+  background-image: url(https://i.imgur.com/3Y9SbQa.jpg);
   background-position: center;
   background-size: 100%;
   background-size: cover;
