--- a/src/components/Contact copy 3/style.scss
+++ b/src/components/Contact copy 3/style.scss
@@ -2,7 +2,7 @@
   .main-content {
     margin-top: 97px;
     &__top {
-      background-image: url(https://intersica.com/wp-content/uploads/2019/07/iStock-545645280-C-zbruch-.jpg);
+      background-image: url(https://us.123rf.com/450wm/krzysztof12/krzysztof121904/krzysztof12190400178/121753166-lights-of-cars-with-night.jpg?ver=6);
       background-position: center;
       -webkit-background-size: 100%;
       -webkit-background-size: cover;
