--- a/src/components/Design/style.scss
+++ b/src/components/Design/style.scss
@@ -1,7 +1,7 @@
 
 
 .mainC .design .main-content__top {
-  background-image: url(https://image.freepik.com/free-photo/technical-drawings-hand-with-pencil_19485-52474.jpg);
+  background-image: url(https://i.imgur.com/Wtq0XF7.jpg);
   background-position: center;
   -webkit-background-size: 100%;
   -webkit-background-size: cover;
