--- a/src/components/Contact/style.scss
+++ b/src/components/Contact/style.scss
@@ -2,7 +2,7 @@
   .main-content {
     margin-top: 97px;
     &__top {
-      background-image: url(https://us.123rf.com/450wm/valex113/valex1131512/valex113151200058/51415362-abstract-3d-rendering-of-sphere-with-chaotic-structure-background-with-red-wireframe-and-globe-in-em.jpg?ver=6);
+      background-image: url(https://t4.ftcdn.net/jpg/01/98/22/71/240_F_198227156_8dKsEWU8ZeVRSYW7QecJ7KUBr9DXcWLa.jpg);
       background-position: center;
       -webkit-background-size: 100%;
       -webkit-background-size: cover;
